--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,8 @@ body {
   background: linear-gradient(to bottom, #f5f5f5, #e8daef);
   transition: background 5s ease, color 0.3s ease;
   color: var(--text-primary);
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-height: 100dvh;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -97,8 +98,9 @@ a {
 }
 
 section {
-  height: 100vh;
-  scroll-snap-align: center;
+  height: 100dvh;
+  scroll-snap-align: start;
+  scroll-snap-stop: always;
 }
 
 .loading-skeleton {
